--- a/front-end/package.json
+++ b/front-end/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "axios": "^1.3.4",
     "vue": "^3.2.47",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
